# peasoup2

./: .gitignore  CMakeLists.txt
FFAster/: .cproject  .gitignore  .project  Makefile  README.md
FFAster/cub/examples/device/: hack.cu
FFAster/include/: base.cuh  detrend.cuh  distiller.cuh  downsample.cuh  factorise.cuh  ffa.cuh  ffaplan.cuh  ffaster.h  generic_kernels.cuh  snengine.cuh  utils.cuh
FFAster/include/detail/: detrend.inl  distiller.inl  downsample.inl  factorise.inl  generic_kernels.inl  snengine.inl
FFAster/prototype/: mini_ffa.py  pdmp.per  pdmp.posn  pyFFAster.py  tmp.py
FFAster/src/: detrend.cu  factorise.cu  ffa.cu  ffaster.cu  plot_periodogram.py  snengine.cu
FFAster/src/tests/: test_detrend.cu  test_downsample.cu  test_ffa.cu  test_ffaexecution_stream.cu  test_ffaplan.cu  test_matched_filter_analyser.cu  test_stddev_normaliser.cu  test_test.cu  test_test.py  test_utils.cuh
benchmarking/: CMakeLists.txt  benchmark_dedispersion.cu  benchmark_fft.cu  benchmark_harmonic_sum.cu  benchmark_peakfind.cu  benchmark_resample.cu  benchmark_spectrumform.cu  cub_device_select_benchmark.cu
benchmarking/harmonic_sum/: CMakeLists.txt  benchmark_harmonic_sum.cu
cmake/: FindDedisp.cmake  FindFFTW.cmake  FindNVTX.cmake  FindThrust.cmake  compiler_settings.cmake  cuda.cmake
data/sigproc/: test.tim
include/cmdline/: cmdline.hpp
include/data_types/: candidates.cuh  container.cuh  dispersiontime.cuh  frequencyseries.cuh  harmonicseries.cuh  metadata.cuh  timefrequency.cuh  timeseries.cuh  types.cuh
include/io/: file.cuh  presto.cuh  sigproc.cuh  stream.cuh
include/io/detail/: sigproc.inl
include/misc/: constants.h  policies.cuh  system.cuh
include/misc/detail/: policies.inl
include/pipelines/: accel_plan.hpp  accelsearcher.cuh  args.hpp  cmdline.cuh  dmtrialqueue.cuh  preprocessor.cuh  worker.cuh
include/pipelines/detail/: accel_plan.inl  accelsearcher.inl  dmtrialqueue.inl  pipeline.inl  pipeline_builder.inl  preprocessor.inl  worker.inl
include/pipelines/ffa_based/: preprocessor.cuh
include/pipelines/ffa_based/detail/: preprocessor.inl
include/pipelines/fft_based/: accelsearch_worker.cuh  accelsearcher.cuh  preprocessor.cuh  tf_fft_pipeline.cuh
include/pipelines/fft_based/detail/: accelsearch_worker.inl  accelsearcher.inl  preprocessor.inl  tf_fft_pipeline.inl
include/tclap/: UnlabeledMultiArg.h  UnlabeledValueArg.h
include/transforms/: baselinefinder.cuh  clip.cuh  dedisperser.cuh  distillers.cuh  downsampler.cuh  fft.cuh  harmonicsum.cuh  normaliser.cuh  pad.cuh  peak_finder.cuh  peakfinder.cuh  resampler.cuh  spectrumformer.cuh  transform_base.cuh  zapper.cuh
include/transforms/detail/: baselinefinder.inl  clip.inl  dedisperser.inl  distillers.inl  downsampler.inl  fft.inl  harmonicsum.inl  normaliser.inl  pad.inl  peakfinder.inl  resampler.inl  spectrumformer.inl  zapper.inl
include/tvgs/: timeseries_generator.cuh
include/utils/: characteristics.hpp  chi2lib.hpp  factorise.cu  factorise.cuh  factorise.hpp  logging.hpp  nvtx.hpp  printer.hpp  timer.cuh  utils.cuh
python/: Makefile  chi2lib.py  pychi2lib.cpp
src/utils/: CMakeLists.txt  cdflib.cpp  characteristics.cpp  chi2lib.cpp
test/: CMakeLists.txt
test/data_types/: CMakeLists.txt  gtest_data_types  test_container.cu  test_dispersiontime.cu  test_frequencyseries.cu  test_harmonicseries.cu  test_timefrequency.cu  test_timeseries.cu
test/io/: CMakeLists.txt  test_sigproc.cu
test/pipelines/: CMakeLists.txt  test_accelsearcher.cu  test_dmtrialqueue.cu  test_preprocessor.cu  test_worker.cu
test/pipelines/fft_based/: CMakeLists.txt  test_accelsearcher.cu  test_preprocessor.cu  test_tf_fft_pipeline.cu
test/transforms/: CMakeLists.txt  test_baselinefinder.cu  test_cachedownsampler.cu  test_clip.cu  test_dedisperser.cu  test_distillers.cu  test_fft.cu  test_harmonicsum.cu  test_normaliser.cu  test_pad.cu  test_peakfinder.cu  test_resampler.cu  test_spectrumformer.cu  test_zapper.cu
test/tvgs/: CMakeLists.txt  test_timeseries_generator.cu
test/utils/: CMakeLists.txt  test_logging.cpp
